Hook image snapshot events via GRDolphinPlatform
Pharo additionally triggers its image shutdown and startup events before and after image snapshot, whereas Dolphin has additional (separate) events for pre- and post-image snapshot. In Seaside this means that WAServerManager isn't informed when the image is being saved and so doesn't first stop the server.

Address this by hooking into Dolphin's snapshot events when registering for image startup and shutdown notification via GRDolphinPlatform.

Fixes issue #1

--- a/Grease/GRDolphinPlatform.cls
+++ b/Grease/GRDolphinPlatform.cls
@@ -11,20 +11,20 @@ GRDolphinPlatform comment: ''!
 !GRDolphinPlatform methodsFor!
 
 addToShutDownList: anObject
-	"Add anObject to the shutdown-list of the system. On shutdown the message #shutDown will be sent to anObject."
+	"Add anObject to the shutdown-list of the system. On shutdown the message #shutDown will be sent to anObject.
+	To be compatible with Pharo we also need to hook onto the imageSaveStarting event"
 
 	SessionManager current
-		when: #sessionStopped
-			send: #shutDown
-			to: anObject!
+		when: #sessionStopped send: #shutDown to: anObject;
+		when: #imageSaveStarting send: #shutDown to: anObject!
 
 addToStartUpList: anObject
-	"Add anObject to the startup-list of the system. On startup the message #startUp will be sent to anObject."
+	"Add anObject to the startup-list of the system. On startup the message #startUp will be sent to anObject..
+	To be compatible with Pharo we also need to hook onto the imageSaveCompleted event"
 
 	SessionManager current
-		when: #sessionStarted
-			send: #startUp
-			to: anObject!
+		when: #sessionStarted send: #startUp to: anObject;
+		when: #imageSaveCompleted send: #startUp to: anObject!
 
 asMethodReturningByteArray: aByteArrayOrString named: aSymbol
 	"Generates the source of a method named aSymbol that returns aByteArrayOrString as a ByteArray"
